--- a/language/EN.json
+++ b/language/EN.json
@@ -1,79 +1,80 @@
+
 {
-    "LANGUAGE": "English",
-    "LANGCODE": "en",
-    "AUTHOR"  : "sanuwa official",
-    "STRINGS" : { 
-                  "aqua" : {   
-                            "COMMAND"  : "Command",
-                            "DESC"     : "Description",
-                            "EXAMPLE"  : "Example",
-                            "NOT_FOUND": "*I couldnt find a command like this*",
-                            "WARN"     : "Warn"
-                           },
-                  "yt" :   {
-                            "N_SONG"   : "*🧜‍♀️💬ENTER A SONG NAME*\nex : .song faded" ,
-                            "NOT_SONG" : "*SONG NOT FOUND‼️*" ,
-                            "S_YT"     : "*🔍SEARCHING ON YOUTUBE...*" ,
-                            "N_YT"     : "*🧜‍♀️💬ENTER A TOPIC* \nex : .getyt sri lanka cricket" ,
-                            "N_VID"    : "*🧜‍♀️💬ENTER A YOUTUBE VIDEO LINK*\nex : .video https://aseeladayahs.blogspot.com" ,
-                            "N_FB"     : "*🧜‍♀️💬ENTER A FACEBOOK VIDEO LINK*" , 
-                            "N_MF"     : "*🧜‍♀️💬ENTER A MEDIAFIRE LINK*" , 
-                            "N_TIK"    : "*🧜‍♀️💬ENTER A TIKTOK VIDEO LINK*" ,
-                            "NOT_VID"  : "*VIDEO NOT FOUND‼️*", 
-                            "N_IG "    : "🧜‍♀️💬ENTER A INSTAGRAM LINK",
-                            "N_FOUND"  : "*NOT FOUND‼️*"
-                          } ,
-                "admin" : {  
-                             "UR_NOT_ADMIN": "*You are not admin in this group!*",
-                             "IM_NOT_ADMIN": "*I am not admin in this group!*",
-                             "BANNED": "kicked out of the group!",
-                             "GIVE_ME_USER": "*Give me a user!*" ,
-                             "USER_IS_ADMIN" : "*Can not kick group Admins!*" ,
-                             "ADDED"         : "added to the group!!" ,
-                             "E_USER"        : "*🧜‍♀️💬  Enter the number to be added to the group with the country code without + mark and space.*",
-                             "ISN_ADMIN"     : "*🧜‍♀️💬The person you mentioned is not a group admin.*",
-                             "IS_ADMIN"      : "*🧜‍♀️💬The person you mentioned is a group admin.*",
-                             "MUTE"          : "*🧜‍♀️💬The group chat has muted!.*",
-                             "UNMUTE"        : "*🧜‍♀️💬The group chat has unmuted!.*",
-                             "PROMOTE"       : "has been promoted !",
-                             "DEMOTE"        : "has been demoted !"
+    "LANGUAGE" : " English " ،
+    "LANGCODE" : " ar " ،
+    "المؤلف"    : "مسؤول  " ،
+    "STRINGS" : {
+                  "أصيل عدايه" : {   
+                            "الأمر"    : " الأمر " ،
+                            "DESC"       : " الوصف " ،
+                            "مثال"    : " مثال " ،
+                            "NOT_FOUND" : " * لم أتمكن من العثور على أمر مثل هذا * " ،
+                            " تحذير": " تحذير "
+                           } ،
+                  "yt" : {
+                            "N_SONG"     : " * 🧜‍♀️💬 أدخل اسم الأغنية * \ n على سبيل المثال: أغنية باهتة " ،
+                            "NOT_SONG" : " * لم يتم العثور على الأغنية‼ ️ * " ،
+                            "S_YT"       : " * بحث على YOUTUBE ... * " ،
+                            "N_YT"       : " * 🧜‍♀️💬 أدخل موضوعًاًا * \ n على سبيل المثال: .getyt sri lanka cricket " ،
+                            "N_VID"      : " * 🧜‍♀️💬 أدخل رابط فيديو YOUTUBE * \ n على سبيل المثال: فيديو https://aseeladayahs.blogspot.com " ،
+                            "N_FB"       : " * 🧜‍♀️💬 أدخل رابط فيديو في الفيسبوك * " ،
+                            "N_MF"       : " * 🧜‍♀️💬 أدخل الوسائط * " ،
+                            "N_TIK"      : " * 🧜‍♀️💬 أدخل رابط فيديو TIKTOK * " ،
+                            "NOT_VID"    : " * لم يتم العثور على الفيديو‼ ️ * " ،
+                            "N_IG"      : " 🧜‍♀️💬 أدخل رابط INSTAGRAM " ،
+                            "N_FOUND"    : " * غير موجود‼ ️ * "
+                          } ،
+                "المشرف" : {  
+                             "UR_NOT_ADMIN" : " * أنت لست مشرفًا في هذه المجموعة! * " ،
+                             "IM_NOT_ADMIN" : " * أنا لست مشرفًا في هذه المجموعة! * " ،
+                             "ممنوع" : " طرد من المجموعة! " ،
+                             "GIVE_ME_USER" : " * أعطني مستخدم! * " ،
+                             "USER_IS_ADMIN" : " * لا يمكن طرد مسؤولي المجموعة! * " ،
+                             " مضاف": أضيف إلى المجموعة !! " ،
+                             "E_USER"          : " * 🧜‍♀️💬 أدخل الرقم المراد إضافته إلى المجموعة مع رمز البلد بدون علامة + مسافة. * " ،
+                             "ISN_ADMIN"       : " * 🧜‍♀️💬 الشخص الذي ذكرته ليس مسؤول مجموعة. * " ،
+                             "IS_ADMIN"        : " * 🧜‍♀️💬 الشخص الذي ذكرته هو مدير مجموعة. * " ،
+                             "MUTE"            : " * 🧜‍♀️💬 تم كتم صوت الدردشة الجماعية !. * " ،
+                             "UNMUTE"          : " * 🧜‍♀️💬 تمت إعادة صوت الدردشة الجماعية !. * " ،
+                             "تعزيز"         : " تمت المراجعة " ،
+                             "DEMOTE"          : " تم تخفيض رتبته! "
     
-                           } ,
+                           } ،
                 "stic" : {
-                              "NEED"   : "*🧜‍♀️💬 please mention an image or video*" ,
-                              "C_STIC" : "```🧰creating sticker...```" ,
-                              "N_STIC" : "*🧜‍♀️💬 Please mention a sticker.*" ,
-                              "C_IMG"  : "```🧰converting sticker to image...```" ,
-                              "C_VID"  : "```🧰converting animated sticker to video...```" 
-                           },
+                              " مطلوب"    : " * 🧜‍♀️💬 يرجى ذكر صورة أو مقطع فيديو * " ،
+                              "C_STIC" : " ` `🧰 إنشاء ملصق ...` ` " ،
+                              "N_STIC" : " * 🧜‍♀️💬 يرجى ذكر ملصق. * " ،
+                              "C_IMG"   : " ` `🧰 تحويل الملصق إلى صورة ..." " " ،
+                              "C_VID"   : " ` `🧰 تحويل ملصق متحرك إلى فيديو ...` ` " 
+                           } ،
                
-                "apk"  :  {  
-                              "N_LINK" : "*🧜‍♀️💬 Enter a google playstore app link .*" ,
-                              "ERROR"  : "*🧜‍♀️💬APK Not Found!.*"
+                "apk"   : {  
+                              "N_LINK" : " * 🧜‍♀️💬 أدخل رابط تطبيق google playstore. * " ،
+                              "خطأ"   : " * APK غير موجود!. * "
     
-                           },
-         "filters": {
-            "FILTER_DESC": "It adds a filter. If someone writes your filter, it send the answer. If you just write .filter, it show's your filter list.",
-            "NO_FILTER": "*❌ There are no filters in this chat!*",
-            "FILTERS": "*🔎 There is your filters in this chat:*",
-            "NEED_REPLY": "*❌ Please type in reply!*\n*Example:*",
-            "FILTERED": "*✅ Successfully set* ```{}``` *to filter!*",
-            "STOP_DESC": "Stops the filter you added previously.",
-            "NEED_FILTER": "*❌ Please type a filter!*\n*Example:*",
-            "ALREADY_NO_FILTER": "*❌ There is already no filter like this!*",
-            "DELETED": "*✅ The filter was successfully deleted!*"
-        },
-        "greetings": {
-            "NOT_SET_WELCOME": "*🧜‍♀️💬You don't set the welcome message yet.!*\n**To set:** ```.welcome hi && hi#how are you?```",
-            "WELCOME_ALREADY_SETTED": "*✅ Welcome message already set!*\n*Message:* ```",
-            "NEED_WELCOME_TEXT": "*🧜‍♀️💬You must write a message to set up the welcome message.*\n*Example:* ```.welcome hi && hi#how are you?```",
-            "WELCOME_DELETED": "*✅ Welcome message has been deleted successfully!*",
-            "WELCOME_SETTED": "*✅ Welcome message has been set successfully!*",
-            "NOT_SET_GOODBYE": "*🧜‍♀️💬You didn't set a goodbye message!*\n*To set:* ```.goodbye bye && bye#see ya```",
-            "GOODBYE_ALREADY_SETTED": "*✅ Goodbye message has been set!*\n*Message:* ```",
-            "NEED_GOODBYE_TEXT": "*🧜‍♀️💬You must write a message to set up the goodbye message.*\n*Example:* ```.goodbye bye && bye#see ya```",
-            "GOODBYE_DELETED": "*✅ Goodbye message has been deleted successfully!*",
-            "GOODBYE_SETTED": "*✅ Goodbye message has been setted successfully!*"
+                           } ،
+         "عوامل التصفية" : {
+            "FILTER_DESC" : " يضيف فلترًا. إذا كتب شخص ما الفلتر الخاص بك ، فسيتم إرسال الإجابة. إذا كتبت للتو مرشحًا ، فستظهر قائمة التصفية الخاصة بك. " ،
+            "NO_FILTER" : " * ❌ لا توجد عوامل تصفية في هذه الدردشة! * " ،
+            " الفلاتر" : " * 🔎 توجد عوامل التصفية الخاصة بك في هذه الدردشة: * " ،
+            "NEED_REPLY" : " * ❌ الرجاء كتابة الرد! * \ n * مثال: * " ،
+            "FILTERED" : " * ✅ نجح في تعيين *` `{}` `* لتصفية! * " ،
+            "STOP_DESC" : " يوقف الفلتر الذي أضفته سابقًا. " ،
+            "NEED_FILTER" : " * ❌ الرجاء كتابة عامل تصفية! * \ n * مثال: * " ،
+            "ALREADY_NO_FILTER" : " * ❌ لا يوجد مرشح مثل هذا بالفعل! * " ،
+            "محذوف" : " * ✅ تم حذف الفلتر بنجاح! * "
+        } ،
+        "تحياتي" : {
+            "NOT_SET_WELCOME" : " * 🧜‍♀️💬 لم تقم بتعيين رسالة الترحيب بعد.! * \ n ** لتعيين: **` ` .
+            "WELCOME_ALREADY_SETTED" : " * ✅ تم تعيين رسالة الترحيب بالفعل! * \ n * الرسالة: *` ` " ،
+            "NEED_WELCOME_TEXT" : " * 🧜‍♀️💬 يجب عليك كتابة رسالة لإعداد رسالة الترحيب. * \ n * مثال: *` `.welcome hi && hi # how are you؟` `` " ،
+            "WELCOME_DELETED" : " * ✅ تم حذف رسالة الترحيب بنجاح! * " ،
+            "WELCOME_SETTED" : " * ✅ تم تعيين رسالة الترحيب بنجاح! * " ،
+            "NOT_SET_GOODBYE" : " * 🧜‍♀️💬 لم تضبط رسالة وداعًا! * \ n * لتعيين: *` `.goodbye && bye # see ya "` " ،
+            "GOODBYE_ALREADY_SETTED" : " * ✅ تم تعيين رسالة الوداع! * \ n * الرسالة: *` ` " ،
+            "NEED_GOODBYE_TEXT" : " * 🧜‍♀️💬 يجب عليك كتابة رسالة لإعداد رسالة الوداع. * \ n * مثال: *` `.goodbye && bye # see ya "` " ،
+            "GOODBYE_DELETED" : " * ✅ تم حذف رسالة الوداع بنجاح! * " ،
+            "GOODBYE_SETTED" : " * ✅ تم ضبط رسالة الوداع بنجاح! * "
         }
 
 
