--- a/language/EN.json
+++ b/language/EN.json
@@ -1,6 +1,6 @@
 
 {
-    "LANGUAGE" : " English " ،
+    "LANGUAGE" : " Arabic " ،
     "LANGCODE" : " ar " ،
     "المؤلف"    : "مسؤول  " ،
     "STRINGS" : {
